<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wearlauncher="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/transport"
    android:orientation="vertical">
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <com.sczn.wearlauncher.status.view.ModeIcon
	        android:id="@+id/status_mode"
	        style="@style/style_status_icon_contain"
	        wearlauncher:stringId="@string/status_mode"
	        wearlauncher:imageId="@drawable/statu_icon_mode_on"/>
	    <com.sczn.wearlauncher.status.view.BrightnessIcon
		    android:id="@+id/status_brightness"
		    style="@style/style_status_icon_contain"
		    wearlauncher:stringId="@string/status_brightness"
		    wearlauncher:imageId="@drawable/statu_icon_brightness"/> 
    </LinearLayout>  
        
    <View 
        android:layout_width="1dp"
        android:layout_height="@dimen/status_icon_horizontal_gap"/>
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            
        <com.sczn.wearlauncher.status.view.VolumeIcon 
		    android:id="@+id/status_volume"
		    style="@style/style_status_icon_contain"
		    wearlauncher:stringId="@string/status_volume"
		    wearlauncher:imageId="@drawable/statu_icon_volume"/>
        
        <com.sczn.wearlauncher.status.view.RaiseScreen
	        android:id="@+id/status_raisescreen"
	        style="@style/style_status_icon_contain"
	        wearlauncher:stringId="@string/status_raisescreen"
	        android:visibility="gone"
	        wearlauncher:imageId="@drawable/statu_icon_raisescreen_off"/>

		<com.sczn.wearlauncher.status.view.ShutDown
	        android:id="@+id/status_shutdown"
	        style="@style/style_status_icon_contain"
	        wearlauncher:stringId="@string/status_shutdown"
	        wearlauncher:imageId="@drawable/ic_poweroff_shutdown_on"/>
    </LinearLayout> 
</LinearLayout>
