<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_top_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/current_alt_index_text"/>
    <LinearLayout
        android:id="@+id/values_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/values_top_padding"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/current_alt_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4dd2b1"
            android:textSize="@dimen/text_size_largest"/>
     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4dd2b1"
            android:textSize="@dimen/text_size_large"
            android:text="@string/alt_unit"/>
    </LinearLayout>

    <com.sczn.wearlauncher.card.view.ChartView
        android:id="@+id/chart_line"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/values_ll"
        app:maxValue="200"
        app:dividerCount="2"
        app:pathStartColor="@color/alt_path_top_color"
        app:pathEndColor="@color/alt_path_bottom_color"/>

	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/title_bottom_padding"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/recent_alt_text"/>
</RelativeLayout>
