<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/title_top_padding"
        android:text="@string/current_air_pressure_index_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:id="@+id/values_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/values_top_padding"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_air_pressure_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#316de3"
            android:textSize="@dimen/text_size_largest" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_unit"
            android:textColor="#316de3"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <com.sczn.wearlauncher.card.view.ChartView
        android:id="@+id/chart_line"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_below="@+id/values_ll"
        android:layout_centerHorizontal="true"
        app:dividerCount="2"
        app:maxValue="2000"
        app:pathEndColor="@color/air_pressure_path_bottom_color"
        app:pathStartColor="@color/air_pressure_path_top_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/title_bottom_padding"
        android:text="@string/recent_air_pressure_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />
</RelativeLayout>
